Avoid changing page aspect when hiding window scrollbar

--- a/platform-ui-skin/src/main/webapp/skin/less/_global.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/_global.less
@@ -1145,6 +1145,10 @@ hr {
 .overflow-hidden {
   overflow: hidden !important;
 }
+.hide-scroll {
+  overflow: hidden !important;
+  margin-right: 14px !important;
+}
 .text-color {
   color: @textColor !important;
 }
